fixed decrement button to handle removal cases + added splash-video w z-index for layering

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -1,11 +1,15 @@
-/* .background-video {
-    background-clip: url('https://player.vimeo.com/video/576970863?h=a36f935b8d&title=0&muted=1&autopause=0&loop=1&background=1&app_id=122963');
-} */
+.background-video-container {
+   position: relative;
+}
+
+.video {
+    position: absolute;
+}
 
 .button-container-vertical {
-    /* position: absolute; */
+    position: absolute;
     height: 500px;
-    width: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -22,7 +26,7 @@
 }
 .index-navlink-button {
     /* font-weight: 200; */
-    font-size: 16px;
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #006990;
     color: #A3F3FF;
@@ -30,7 +34,8 @@
     padding: 12px;
     padding-left: 16px;
     padding-right: 18px;
-    margin-right: 6%;
+    margin-right: 5%;
+    margin-top: 2%;
 }
 
 .index-navlink-button:hover {
